--- a/_styles/-theme.scss
+++ b/_styles/-theme.scss
@@ -3,7 +3,7 @@
 
 // colors
 [data-dark="false"] {
-  --primary: #fa9406;
+  --primary: #994708;
   --secondary: #cfab7a;
   --text: #000000;
   --background: #ffffff;
@@ -15,7 +15,7 @@
 }
 [data-dark="true"] {
   --primary: #cfab7a;
-  --secondary: #eca43f;
+  --secondary: #e6aa57;
   --text: #ffffff;
   --background: #181818;
   --background-alt: #1c1c1c;
