--- a/_styles/-theme.scss
+++ b/_styles/-theme.scss
@@ -6,8 +6,8 @@
   --primary: #994708;
   --secondary: #cfab7a;
   --text: #000000;
-  --background: #ffffff;
-  --background-alt: #f1e9e9;
+  --background: #faf9f5;
+  --background-alt: #0c0808;
   --light-gray: #e0e0e0;
   --gray: #3a3636;
   --dark-gray: #292626;
