--- a/_styles/-theme.scss
+++ b/_styles/-theme.scss
@@ -6,7 +6,7 @@
   --primary: #994708;
   --secondary: #cfab7a;
   --text: #000000;
-  --background: #faf9f5;
+  --background: #e7e5da;
   --background-alt: #ffffff;
   --light-gray: #e0e0e0;
   --gray: #3a3636;
@@ -17,9 +17,9 @@
   --primary: #cfab7a;
   --secondary: #e6aa57;
   --text: #ffffff;
-  --background: #181818;
-  --background-alt: #0e0d0d;
-  --light-gray: #292626;
+  --background: #353333;
+  --background-alt: #2e2b2b;
+  --light-gray: #111010;
   --gray: #3a3636;
   --dark-gray: #e0e0e0;
   --overlay: #1c1c1c;
